# Opengl

./: CMakeLists.txt
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: glad.c  main.cpp  utils.hpp
src/debuging/: errorReporting.cpp
src/engine/: engine.cpp  engine.hpp  input.cpp  input.hpp  transform.cpp  transform.hpp
src/engine/draw/: drawUtils.cpp  drawUtils.hpp
src/renderer/draw/: Renderer.cpp  Renderer.hpp
src/renderer/mesh/: Mesh.hpp
src/renderer/shader/: shader.cpp  shader.hpp
